Update success stories page description

--- a/src/app/wins/wins.component.scss
+++ b/src/app/wins/wins.component.scss
@@ -1,3 +1,8 @@
+.description {
+  font: 400 16px/22px Roboto, sans-serif;
+  margin-bottom: 28px;
+}
+
 img {
   height: auto;
   border-radius: 4px;
