--- a/src/app/wins/wins.component.html
+++ b/src/app/wins/wins.component.html
@@ -1,5 +1,11 @@
 <h1>Success stories</h1>
 
+<p class="description">
+  When a customer presents us with their vehicle, we work diligently to reveal its true worth.
+  Through our thorough evaluation and skilled negotiation, we are able to substantially increase
+  the insurance payout. Below are a few examples.
+</p>
+
 <mat-card class="example-card">
   <mat-card-header>
     <mat-card-title-group>
@@ -12,12 +18,6 @@
       <img src="../assets/success-1-a.jpg" (click)="openViewImageDialog('../assets/success-1-a.jpg')">
       <div class="vertical-line"></div>
       <img src="assets/success-1-c.jpg" (click)="openViewImageDialog('../assets/success-1-c.jpg')">
-    </div>
-    <div style="margin-top: 12px;">
-      When a customer presented their 1990 BMW 325i initially valued at $10,800,
-      we worked diligently to reveal its true worth.
-      Through our thorough evaluation and skilled negotiation, we successfully
-      increased the insurance payout to $20,286.
     </div>
   </mat-card-content>
 </mat-card>
