--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -48,6 +48,7 @@ td {
   background-color: rgb(75, 75, 75) !important;
 }
 
+textarea,
 input,
 ::placeholder {
   color: rgba(255, 255, 255, 0.7) !important;
