--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -3,16 +3,16 @@
 <table class="example-full-width" cellspacing="0">
   <tr>
     <td class="photo-td">
-      <img src="assets/harrys-photo.jpg" class="harrys-photo"/>
+      <img src="assets/harrys-photo.jpg" class="harrys-photo" alt="Harold Bloomer"/>
     </td>
     <td class="contact-td">
       <h2 style="margin: 0; font-weight: 400;">Harold Bloomer</h2>
       <div class="contact-div">
-        <img src="assets/phone-solid.svg" class="icon"/>
+        <img src="assets/phone-solid.svg" class="icon" alt="Phone icon"/>
         (269) 680-7706
       </div>
       <div>
-        <img src="assets/envelope-solid.svg" class="icon"/>
+        <img src="assets/envelope-solid.svg" class="icon" alt="Envelope icon"/>
         appraisalsh&#64;gmail.com
       </div>
     </td>
