--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -16,7 +16,7 @@
     <mat-card-header>
       <mat-card-title-group>
         <mat-card-title>Insurance Appraisals</mat-card-title>
-        <img mat-card-lg-image src="assets/insurance-appraisals.jpg">
+        <img mat-card-lg-image src="assets/insurance-appraisals.jpg" alt="MK1 Volgswagen Rabbit">
       </mat-card-title-group>
     </mat-card-header>
     <mat-card-content>
@@ -30,7 +30,7 @@
     <mat-card-header>
       <mat-card-title-group>
         <mat-card-title>Prior to Loss</mat-card-title>
-        <img mat-card-lg-image src="assets/prior-to-loss.jpg">
+        <img mat-card-lg-image src="assets/prior-to-loss.jpg" alt="Smashed Mercedes">
       </mat-card-title-group>
     </mat-card-header>
     <mat-card-content>
@@ -44,7 +44,7 @@
     <mat-card-header>
       <mat-card-title-group>
         <mat-card-title>Custom and Collectible Car Appraisal</mat-card-title>
-        <img mat-card-lg-image src="assets/collectible.jpg">
+        <img mat-card-lg-image src="assets/collectible.jpg" alt="Three classic cars">
       </mat-card-title-group>
     </mat-card-header>
     <mat-card-content>
@@ -62,17 +62,17 @@
 <table class="example-full-width" cellspacing="0">
   <tr>
     <td class="harrys-photo-td">
-      <img src="assets/harrys-photo.jpg" class="harrys-photo"/>
+      <img src="assets/harrys-photo.jpg" class="harrys-photo" alt="Harold Bloomer"/>
     </td>
     <td class="contact-td">
       <div>
         <h2 style="margin: 0; font-weight: 400;">Harold Bloomer</h2>
         <div class="contact-div">
-          <img src="assets/phone-solid.svg" class="icon"/>
+          <img src="assets/phone-solid.svg" class="icon" alt="Phone icon"/>
           (269) 680-7706
         </div>
         <div style="display: flex;">
-          <img src="assets/envelope-solid.svg" class="icon"/>
+          <img src="assets/envelope-solid.svg" class="icon" alt="Envelope icon"/>
           appraisalsh&#64;gmail.com
         </div>
       </div>
