--- a/src/app/wins/wins.component.html
+++ b/src/app/wins/wins.component.html
@@ -15,9 +15,9 @@
   </mat-card-header>
   <mat-card-content>
     <div class="image-container dual">
-      <img src="../assets/success-1-a.jpg" (click)="openViewImageDialog('../assets/success-1-a.jpg')">
+      <img src="../assets/success-1-a.jpg" (click)="openViewImageDialog('../assets/success-1-a.jpg')" alt="1990 BMW 325i">
       <div class="vertical-line"></div>
-      <img src="assets/success-1-c.jpg" (click)="openViewImageDialog('../assets/success-1-c.jpg')">
+      <img src="assets/success-1-c.jpg" (click)="openViewImageDialog('../assets/success-1-c.jpg')" alt="1990 BMW 325i">
     </div>
   </mat-card-content>
 </mat-card>
@@ -31,7 +31,7 @@
   </mat-card-header>
   <mat-card-content>
     <div class="image-container single">
-      <img src="../assets/success-2.jpg" (click)="openViewImageDialog('../assets/success-2.jpg')">
+      <img src="../assets/success-2.jpg" (click)="openViewImageDialog('../assets/success-2.jpg')" alt="2013 Audi Q5">
     </div>
   </mat-card-content>
 </mat-card>
@@ -45,7 +45,7 @@
   </mat-card-header>
   <mat-card-content>
     <div class="image-container single">
-      <img src="../assets/success-3.jpg" (click)="openViewImageDialog('../assets/success-3.jpg')">
+      <img src="../assets/success-3.jpg" (click)="openViewImageDialog('../assets/success-3.jpg')" alt="2003 Toyota Tundra">
     </div>
   </mat-card-content>
 </mat-card>
@@ -59,7 +59,7 @@
   </mat-card-header>
   <mat-card-content>
     <div class="image-container single">
-      <img src="../assets/success-4.jpg" (click)="openViewImageDialog('../assets/success-4.jpg')">
+      <img src="../assets/success-4.jpg" (click)="openViewImageDialog('../assets/success-4.jpg')" alt="2014 Volkswagen Passat">
     </div>
   </mat-card-content>
 </mat-card>
