Fix home page widths on desktop

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,7 +1,7 @@
 .banner {
   width: 100vw;
-  margin: -24px 0 24px -64px;
-  max-width: 1000px;
+  margin: -24px auto 24px auto;
+  max-width: 872px;
 }
 
 p {
